[package]
name = "artifact_lib"
version = "0.1.0"
authors = ["Alec Goncharow <Alec.Goncharow@gmail.com>"]
edition = "2018"
license="MIT"

[badges]
maintenance = {status = "experimental"}

[dependencies]
artifact_serde = "0.2.1"
directories = "1.0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
